--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
       <script src="libraries/matter.js"></script>
       <script src="libraries/p5.js"></script>
       <script src="libraries/p5.play.js"></script>
+      <script src="libraries/p5.sound.min.js"></script>
+      <script src="libraries/p5.dom.min.js"></script>
 
       <script src="sketch.js"></script>
       <script src="js/tree.js"></script>
